TEIID-3559 minor changes